deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ae-usuarios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ae-usuarios
  template:
    metadata:
      labels:
        app: ae-usuarios
    spec:
      containers:
        - name: ae-usuarios
          image: ae-usuarios:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
