service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ae-usuarios
  labels:
    app: ae-usuarios
    app.kubernetes.io/component: ae-usuarios
    app.kubernetes.io/instance: ae-usuarios
    app.kubernetes.io/name: ae-usuarios
    app.kubernetes.io/part-of: ae-app
    app.openshift.io/runtime: ae-usuarios
spec:
  selector:
    app: ae-usuarios
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
